--- a/NAO MEXER ULTRA/requirements.txt
+++ b/NAO MEXER ULTRA/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.0.1
 werkzeug==2.0.1
 fuzzywuzzy==0.18.0
-python-Levenshtein==0.12.0  # Recomendado para melhorar a performance do fuzzywuzzy
+python-Levenshtein==0.12.0 
 gunicorn==20.1.0
